@@ -72,6 +72,7 @@ Bug fixes:
 - PR#5806: ensure that backtrace tests are always run (testsuite)
 - PR#5810: error in switch printing when using -dclambda
 - PR#5858: Assert failure during typing of class
+- PR#5865: assert failure when reporting undefined field label
 
 OCaml 4.00.1:
 -------------
